--- a/style.css
+++ b/style.css
@@ -1,30 +1,35 @@
-body {
-    font-family: sans-serif;
-    background-color: white;
+body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Familjen Grotesk", sans-serif;
+    background-color: #F5F5F5;
+    color: white;
 }
 #Head {
     background-color: #007BFF;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 .Name {
-    margin-left: 350px;
     height: 60px;
     width: 500px;
     font-size: 50px;
-    color: white;
     background-color: #007BFF;
     border: 0cap;
     font-weight: bold;
     text-align: center;
+    color: white;
 }   
 .intro{
-    margin-left: 350px;
     height: 60px;
     width: 500px;
     font-size: 15px;
-    color: white;
     background-color: #007BFF;
     border: 0cap;
     text-align: center;
+    color: white;
 } 
 .Name::placeholder{
     color: white;
@@ -35,9 +40,12 @@ body {
 h2 {
     color: #007BFF;
 }
+.section{
+    margin-left: 14px;
+}
 .Skills-Description{
     height: 50px;
-    width: 400px;
+    width: 65%;
     background-color: gainsboro;
     border: 0cap;
 }
@@ -45,23 +53,25 @@ h2 {
     color: black;
 }
 #Projects {
-    border: 1px solid;
+    border: 1px solid  black;
     height: 100px;
     width: 1250px;
 }
 .Project-title{
     border: 0;
-    width: 500px;
+    width: 100%;
+    height: 45px;
     font-weight: bold;
 }
 .Project-title::placeholder{
     color: black;
     font-weight: bold;
+    font-size: 15px;
 }
 .Project-description {
     border: 0;
-    height: 60px;
-    width: 500px;
+    height: 70px;
+    width: 100%;
 }
 .Project-description::placeholder {
     color: black;
